Fix extra margin applied to main when no sidebar present

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -113,11 +113,11 @@ html, body, .react-root, .app-container {
 
 .sidebar {
   flex: 0 0 250px;
+  margin-right: 30px;
 }
 
 .main {
   flex: 1;
-  margin-left: 30px;
 
   h2 {
     margin-top: 0px;
